--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,21 @@
-FROM node:18 AS build
+FROM node:20-slim
+
 WORKDIR /app
+
 COPY package.json .
+
 RUN npm install
+
 COPY . .
+
 RUN npm run build
+
+# Install a lightweight server to serve the built files
+RUN npm install -g serve
+
+# Expose port 3000 for the app
+EXPOSE 3000
+
+# Serve the built app
+CMD ["serve", "-s", "dist", "-l", "3000"]
 
